--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/dot_db
     username: root
-    password:
+    password: 1860
   jpa:
     show-sql: true
     hibernate:
